--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -21,9 +21,9 @@
             <div class="b1Top f aife jcsb fdc-768">
                 <div class="b1InfoTopLeft f aife jcfs fdc-480">
                     <img src="{{home_page.image_banner.url}}" alt="" width="650" class="imgLogo">
-                    {% if not logged_user %}
+                    {% comment %} {% if not logged_user %}
                     <a href="#" class="button" id="b1ButtonRegister">{{header_section.register_title}}</a>
-                    {% endif %}
+                    {% endif %} {% endcomment %}
                 </div>
                 <div class="b1InfoTopRight">
                     <img src="{{home_page.banner_second_section_image.url}}" alt="">
