--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -146,7 +146,7 @@
         </div>
     </div>
     <div class="gParrafo parrafo-register">
-        {{header_section.register_form_text}}
+        {{header_section.register_form_text|safe}}
     </div>
     <div class="g8Form register-form">
         <form action="" method="POST" class="form-register">
