--- a/src/templates/landing_2/common/_header.html
+++ b/src/templates/landing_2/common/_header.html
@@ -182,7 +182,7 @@
             <h4><a href="#" class="return-register-form"><- Regresar</a></h4>
         </div>
         <div class="gParrafo parrafo-register">
-            <p>{{header_section.register_form_text}}</p>
+            <p>{{header_section.register_form_text|safe}}</p>
         </div>
         <div class="g8Form">
             <form action="" method="POST" class="form-register">
