--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -76,11 +76,11 @@
             <input type="hidden" id="g-recaptcha-response_login" name="g-recaptcha-response">
             <div class="g8GroupInput one">
                 <div class="g8Input">
-                    <span>Email</span>
+                    <span>{{company.email_names_field_title}}</span>
                     <input type="text" id="login_email"  maxlength="30" class="g8Box  validate[required]" name="{{form_login.email.html_name}}">
                 </div>
                 <div class="g8Input password">
-                    <span>Password</span>
+                    <span>Contraseña</span>
                     <input type="password" id="login_passwowrd" maxlength="30" class="g8Box validate[required]" name="{{form_login.password.html_name}}">
                     <a href="#" class="show-hide-pass"></a>
                 </div>
