--- a/src/templates/landing_3/common/_base.html
+++ b/src/templates/landing_3/common/_base.html
@@ -10,6 +10,11 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/web_3/img/favicon/72x72.png">
     <link rel="apple-touch-icon-precomposed" href="/static/web_3/img/favicon/57x57.png"> -->
     {% block cssadicional %}
+    <style>
+        .gracaptcha-badge {
+            z-index: 50;
+        }
+    </style>
     {% endblock %}
     <link rel="stylesheet" type="text/css" href="/static/web_3/css/styles.css?v=1{{ BUILD_ID }}"/>
     <link rel="stylesheet" href="/static/web_3/js/validationform/validationEngine.jquery.css">
