Fix styles for video

--- a/src/templates/landing_2/common/_base.html
+++ b/src/templates/landing_2/common/_base.html
@@ -21,9 +21,9 @@
 
 
 <div class="overlay"></div>
-{% comment %} <div class="videoPopupContent">
+<div class="videoPopupContent">
     <!-- mp4 - youtube - vimeo -->
-</div> {% endcomment %}
+</div>
 <body class="{% block classbody %}{% endblock %}">
     <div class="contentWrapper">
         {% include "landing_2/common/_header.html" %}
@@ -64,7 +64,6 @@
         </figure>
     </div>
     {% endif %}
-
 
     <!-- JSADD START -->
     {% block jsfinal %}{% endblock %}
