--- a/src/templates/landing_3/home.html
+++ b/src/templates/landing_3/home.html
@@ -237,7 +237,7 @@
                 data-text="<p>{{row.description}}</p>"
                 data-taller="{{row.title}}"
                 data-taller-name="{{row.name}}"
-                data-taller-name="{{row.exhibitor.link}}"
+                data-linkedin="{{row.exhibitor.link}}"
                 {% if company_user.confirmed %}
                     data-url-inscribete="{{row.id}}"
                 {% else %}
