--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -348,3 +348,15 @@
         <a href="{% url 'landing:generate_credential' %}" class="gButton">Ok</a>
     </div>
 </div>
+<div class="g8PopupForm b2PopupConfirm pr">
+    <div class="g8PopupContent">
+        <h3>Deseas inscribirte?</h3>
+        <div class="gParrafo">
+            <p>Tu registro se ha compleado, ¿Deseas asistir al evento de forma Presencial?</p>
+        </div>
+        <div class="b2Buttons g8Buttons f aic jcc">
+            <a href="#" data-status="1" class="gButton b2accept validatePerson">Sí</a>
+            <a href="#" data-status="0" class="gButton b2cancel validatePerson">No</a>
+        </div>
+    </div>
+</div>
